# Nonlinear-Phonon-Calculation

./: .gitignore  ARCHITECTURE.md  MANIFEST.in  README.md  README_zh.md  pyproject.toml  start_release.py
hex_qgamma_qpair_workflow/: MM.fc  common.py  run.sh  step2_simple.py
mlff_modepair_workflow/: README.md  __init__.py  compare_qpoint_eigenvectors.py  compare_with_gptff.py  core.py  reference_compare.py  relax_structure.py  run_pair_screening.py  run_pair_screening_optimized.py
nonlinear_phonon_calculation/: cli.py  resources.py  system_inputs.py  workflow_families.py
ops/: TMD_STAGE2_MODEL_PLOTTING_zh.md  WSE2_PES_PLOTTING_zh.md  extract_tmd_stage2_model_metrics.py  extract_wse2_baseline_metrics.py  plot_pes_model_vs_qe_2x2.py  plot_pes_refit_compare.py  plot_tmd_stage2_model_metrics.py  plot_wse2_baseline_metrics.py  run_tmd_stage2_model_analysis.py  run_wse2_baseline_analysis.py  setup_stage1_env.sh  setup_stage2_env.sh  setup_stage3_env.sh
packaging/: TUI_CROSS_MACHINE_BUILD_SPEC_2026-03-31.md
qe_modepair_handoff_workflow/: prepare_top_pairs.py  scf_profile_resolver.py  scf_settings.py
qe_phonon_stage1_server_bundle/: README.md  README_zh.md  common.py  config.py  run_all.py  run_all_impl.py  stage1_env.py  step0_relax.py  step0b_tune_phonon.py  step0c_tune_pes.py  step1_frontend.py
reports/: benchmark_mattersim_stage2_against_qe.py  extract_wse2_remote_stage1_comparison_data.py  plot_wse2_gptff_remote_stage1_comparison.py
server_highthroughput_workflow/: README.md  README_zh.md  handoff_bundle.py  portable_cpu_large.json  qe_input_utils.py  (+6 more)
(+100 files in other folders)
